service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codefresh-service
  namespace: codefresh  
  labels:
    app: codefresh
spec:
  selector:
    app: codefresh
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
