ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefresh-ingress
  namespace: codefresh  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "codefresh-app"
spec:
  tls:
  - hosts:
    - test.shubhamk.online
    secretName: codefresh
  ingressClassName: nginx
  rules:
  - host: test.shubhamk.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codefresh-service
            port:
              number: 5000
